--- a/WizardsVsWirebacks/ToDo.txt
+++ b/WizardsVsWirebacks/ToDo.txt
@@ -1,3 +1,13 @@
+/ ---------------- 09 / 10 -----------
+	// TODO: Generate overloads for draw calls?
+	// How tf to highlight todos?
+	// Might be worth putting in a CursorTileXPx property?
+    // Might be worth putting in a comment priority JSON system - similar to log levels
+	// General thoughts from team on how to organize our work, github branches, customizing with JSONS (like vscode), seeing what visual studio can do
+
+	// For myself - make comments a smaller font?
+
+
 / ---------------- 09 / 09 ------------
 	Learning how referencing works in Gum is going to be very important
 		- May have cooked current project
@@ -32,7 +42,7 @@
 
 	Need to come up with a way forward for drawing the city ("1/Captured" on the intgrid)
 		- Drawing walls on the perimeter, change texture (mountain tile captured)
-			- Walk through autotiling with Ryan
+			- Walk through autotiling with team
 			- Is there a way to alter the CSV in the code and have it feed back into Ldtk?
 				- Thinking about it already, seems like it would be ideal but also can we integrate that type of active tooling into static packages (deployment builds and instances)
 
